// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/FilterItem Check snapshots should renders correctly when closed 1`] = `
<div
  className="consonant-top-filter"
  data-testid="filter-item"
>
  <div
    className="consonant-top-filter--inner"
  >
    <h3
      className="consonant-top-filter--name"
    >
      <button
        className="consonant-top-filter--link"
        data-testid="filter-item-link"
        onClick={[Function]}
        type="button"
      >
        Topic
        <span
          className="consonant-top-filter--selcted-items-qty"
        />
      </button>
    </h3>
    <div
      className="consonant-top-filter--selcted-items"
    >
      <div
        className="consonant-top-filter--absolute-wrapper"
      >
        <ul
          className="consonant-top-filter--items consonant-top-filter--items_clipped"
          data-testid="filter-group"
        >
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="we-retail:activity/hiking"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="we-retail:activity/hiking"
                onChange={[Function]}
                type="checkbox"
                value="we-retail:activity/hiking"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Business Continuity
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="we-retail:activity/biking"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="we-retail:activity/biking"
                onChange={[Function]}
                type="checkbox"
                value="we-retail:activity/biking"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Creativity and Design
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/customer-intelligence"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/customer-intelligence"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/customer-intelligence"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Customer Intelligence
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/data-management-platform"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/data-management-platform"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/data-management-platform"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Data Management Platform
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/digital-foundation"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/digital-foundation"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/digital-foundation"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Digital Foundation
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/digital-trends"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/digital-trends"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/digital-trends"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Digital Trends
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/document-management"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/document-management"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/document-management"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Document Management
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/marketing-automation"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/marketing-automation"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/marketing-automation"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Marketing Automation
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/personalization"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/personalization"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/personalization"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Personalization
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/Stock"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/Stock"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/Stock"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Stock
              </span>
            </label>
          </li>
        </ul>
        <aside
          className="consonant-top-filter--bg"
        />
        <div
          className="consonant-top-filter--footer"
        >
          <span
            className="consonant-top-filter--footer-res-qty"
          >
            0
             results
          </span>
          <button
            className="consonant-top-filter--footer-btn"
            onClick={[Function]}
            type="button"
          >
            Done
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Consonant/FilterItem Check snapshots should renders correctly when opened 1`] = `
<div
  className="consonant-top-filter consonant-top-filter_opened"
  data-testid="filter-item"
>
  <div
    className="consonant-top-filter--inner"
  >
    <h3
      className="consonant-top-filter--name"
    >
      <button
        className="consonant-top-filter--link"
        data-testid="filter-item-link"
        onClick={[Function]}
        type="button"
      >
        Topic
        <span
          className="consonant-top-filter--selcted-items-qty"
        />
      </button>
    </h3>
    <div
      className="consonant-top-filter--selcted-items"
    >
      <div
        className="consonant-top-filter--absolute-wrapper"
      >
        <ul
          className="consonant-top-filter--items consonant-top-filter--items_clipped"
          data-testid="filter-group"
        >
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="we-retail:activity/hiking"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="we-retail:activity/hiking"
                onChange={[Function]}
                type="checkbox"
                value="we-retail:activity/hiking"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Business Continuity
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="we-retail:activity/biking"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="we-retail:activity/biking"
                onChange={[Function]}
                type="checkbox"
                value="we-retail:activity/biking"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Creativity and Design
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/customer-intelligence"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/customer-intelligence"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/customer-intelligence"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Customer Intelligence
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/data-management-platform"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/data-management-platform"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/data-management-platform"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Data Management Platform
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/digital-foundation"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/digital-foundation"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/digital-foundation"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Digital Foundation
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/digital-trends"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/digital-trends"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/digital-trends"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Digital Trends
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/document-management"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/document-management"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/document-management"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Document Management
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/marketing-automation"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/marketing-automation"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/marketing-automation"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Marketing Automation
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/personalization"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/personalization"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/personalization"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Personalization
              </span>
            </label>
          </li>
          <li
            className="consonant-top-filter--items-item"
            data-testid="filter-group-item"
          >
            <label
              className="consonant-top-filter--items-item-label"
              htmlFor="adobe-com-enterprise:topic/Stock"
            >
              <input
                checked={undefined}
                data-testid="list-item-checkbox"
                id="adobe-com-enterprise:topic/Stock"
                onChange={[Function]}
                type="checkbox"
                value="adobe-com-enterprise:topic/Stock"
              />
              <span
                className="consonant-top-filter--items-item-checkmark"
              />
              <span
                className="consonant-top-filter--items-item-name"
              >
                Stock
              </span>
            </label>
          </li>
        </ul>
        <aside
          className="consonant-top-filter--bg"
        />
        <div
          className="consonant-top-filter--footer"
        >
          <span
            className="consonant-top-filter--footer-res-qty"
          >
            0
             results
          </span>
          <button
            className="consonant-top-filter--footer-btn"
            onClick={[Function]}
            type="button"
          >
            Done
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
